# fprime-stage3

./: .gitattributes  .gitignore  backup_fprime.sh  build_and_run.sh  build_stage3_flash.sh  create_minimal_fpp.sh  create_motor_stub.sh  fprime.cmake.bak  linux.cmake  missing_files.txt  patch_stage3_chibios_only.sh  patch_stage3_os_motor.sh  patch_stage3_stm32_hal.sh  patch_stage3_task.sh  requirements-fixed.txt  restore_stage3.sh  setup_stage3_chibios_toolchain.sh  setup_stage3_vesc.sh  setup_stage3_vesc_minimal.sh
Deployments/Tutorial/: settings.ini
Deployments/Tutorial/components/Stage8MotorBridge/Topology/: CMakeLists.txt  MotorBridgeRun.cpp  MotorBridgeTopology.fpp  MotorBridgeTopologyApp.cpp  MotorBridgeTopologyAppAi.xml  TopologyComponentAi.xml
Drv/Motor/: Motor.cpp  Motor.fpp  Motor.hpp
Fw/Dp/: seed-history
Fw_backup/DataStructures/: seed-history
Fw_backup/Logger/: seed-history
Os/Generic/: seed-history
Os/Posix/: seed-history
Stage3_backup_20250926_062431/: Makefile.bak  STM32F4XX.ld  stm32f4_toolchain.cmake
Stage3_backup_20250926_062431/ChibiOs/: Queue.cpp  Task.hpp  Time.hpp
Stage3_backup_20250926_062431/Stage3_ready/: CMakeLists.txt  main.cpp  stm32f4_toolchain.cmake
Stage3_backup_20250926_062431/Toolchain/: arm-chibios.cmake
Stage3_backup_20250926_062431/VESC/: PID.cpp
Stage3_backup_20250926_062431/components/: SampleComponent.cpp
Stage3_backup_20250926_062431/src/: chcond.c  chdebug.c  chdynamic.c  chevents.c  chregistry.c  chschd.c  chthreads.c  chvt.c  hal_can.c  hal_efl.c  hal_efl_lld.h  hal_flash.c  hal_gpt.c  hal_i2c.c  hal_lld.c  hal_lld.h  hal_mac.c  hal_rtc.c  hal_serial_usb.c  hal_sio.c  hal_spi_v1.inc  hal_spi_v2.inc  hal_st.c  halconf.h  main.cpp  mk  stm32_isr.h  vectors.S
Stage3_backup_20250926_063030/: CMakeLists.txt  Os.hpp  arm-gcc-toolchain.cmake  syscalls.c
Stage3_backup_20250926_063030/ChibiOs/: Semaphore.cpp
Stage3_backup_20250926_063030/Toolchain/: arm-gcc.cmake
Stage3_backup_20250926_063030/VESC/: MotorController.hpp  (+1 more)
Stage3_backup_20250926_064637/: ChibiOS-21.11.4.tar.xz  Makefile  MotorController.cpp  armNone.sh  main.cpp
Stage3_backup_20250926_064637/minimal_chibios/: CMakeLists.txt  arm-gcc-toolchain.cmake  startup_stm32f4xx.s
Stage3_backup_20250926_064637/minimal_chibios/minimal_chibios/: CMakeLists.txt  stm32f407.ld
Stage3_backup_20250926_064637/minimal_chibios/src/hal/: halconf.h
Stage3_backup_20250926_064637/minimal_chibios/src/stubs/: ch.h  chconf.h  chtypes.h
Stage3_new/: CMakeLists.txt  main.cpp  settings.ini
Stage3_new/ChibiOs/: Mutex.hpp  Os.hpp  Queue.hpp  Semaphore.hpp  Task.hpp  Time.hpp
Stage3_new/Os/ChibiOs/: Time.cpp  Time.hpp
Stage3_new/components/: SampleComponent.hpp
Stage3_new/fprime_motor/: MotorController.cpp  MotorController.fpp  MotorController.hpp  UARTBridge.cpp  UARTBridge.fpp  UARTBridge.hpp
Stage3_new/include/: led.hpp
Stage3_new/include/include/: uart.hpp
Stage3_new/src/: led.cpp
Stage3_new/src/src/: uart.cpp
Stage3_valid/: CMakeLists.txt  main.cpp  settings.ini
fprime-venv-py311/: pyvenv.cfg
scripts/: fast_motor_test.sh  fprime-util  motor_control.sh
scripts.bak/: fprime_build.sh  motor_control.sh
(+251 files in other folders)
